demos/tbs-spring-petclinic/files/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: NAMESPACE
  annotations:
    - kubernetes.io/ingress.class: contour
  labels:
    app: echoserver
spec:
  tls:
  - secretName: https-secret
    hosts:
      - petclinic.DNS_DOMAIN
  rules:
  - host: petclinic.DNS_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: petclinic
          servicePort: 8080
